# husky_kinova_sim

./: CMakeLists.txt  LICENSE  README.md
description/: husky_core.xacro  kinova_control.xacro  omni_60.xacro
husky_kinova_sim/: CMakeLists.txt
husky_kinova_sim/config/: bridge_params.yaml
husky_kinova_sim/description/: husky.gazebo  husky.urdf.xacro  husky_core.xacro  kinova_gen3.xacro  omni_60.xacro  velodyne_v16.xacro
husky_kinova_sim/launch/: husky_kinova_headless.launch.py
kinova_arm/: package.xml
kinova_arm/config/: husky.srdf  initial_positions.yaml  moveit_controllers.yaml
kinova_arm/launch/: huskydefault_payload_plate_linkend_effector_link_5000_1.000000_1.000000.ikcache  setup_assistant.launch.py  spawn_controllers.launch.py
launch/: husky_kinova_empty.launch.py
src/husky_kinova_sim/: CMakeLists.txt  package.xml
src/husky_kinova_sim/description/: husky.gazebo  husky_core.xacro  kinova_control.xacro  kinova_gen3.xacro  omni_60.xacro  velodyne_v16.xacro
src/husky_kinova_sim/launch/: husky_kinova_empty.launch.py  husky_kinova_headless.launch.py  husky_kinova_room.launch.py  husky_world.launch.py
src/husky_kinova_sim/worlds/: color_world.world  plant_row.world  room.world
src/kinova_arm/: .setup_assistant  CMakeLists.txt  package.xml
src/kinova_arm/config/: husky.ros2_control.xacro  husky.srdf  husky.urdf.xacro  initial_positions.yaml  joint_limits.yaml  ros2_controllers.yaml  ros2_humble_controllers.yaml
src/kinova_arm/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  (+2 more)
worlds/: empty.world
